src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0008.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0008 {
  interface I;
  enum E;
  class C1 extends I;
  class C2 extends E;
  
}